@@ -7,11 +7,14 @@ import static org.apache.spark.sql.functions.udf;
 
 import io.atoti.spark.aggregation.AggregatedValue;
 import java.util.ArrayList;
+import java.util.Arrays;
 import java.util.List;
+import java.util.stream.Collectors;
+
 import org.apache.spark.sql.Column;
 import org.apache.spark.sql.expressions.UserDefinedFunction;
 import org.apache.spark.sql.types.DataTypes;
-import scala.collection.immutable.ArraySeq;
+import scala.collection.compat.immutable.ArraySeq;
 
 public final class Multiply extends Operation {
 
@@ -20,7 +23,7 @@ public final class Multiply extends Operation {
           (Long x, ArraySeq<Long> s) -> {
             ArrayList<Long> list = convertScalaArrayToArray(s);
             return convertToArrayListToScalaArraySeq(
-                list.stream().map((Long value) -> value * x).toList());
+                list.stream().map((Long value) -> value * x).collect(Collectors.toList()));
           },
           DataTypes.createArrayType(DataTypes.LongType));
 
@@ -32,51 +35,51 @@ public final class Multiply extends Operation {
   public Multiply(String name, String scalarColumn, AggregatedValue arrayColumn) {
     super(name);
     this.column = Multiply.udf.apply(col(scalarColumn), arrayColumn.toColumn()).alias(name);
-    this.neededAggregations = List.of(arrayColumn);
+    this.neededAggregations = Arrays.asList(arrayColumn);
   }
 
   public Multiply(String name, String scalarColumn, Operation arrayColumn) {
     super(name);
     this.column = Multiply.udf.apply(col(scalarColumn), arrayColumn.toColumn()).alias(name);
-    this.neededOperations = List.of(arrayColumn);
+    this.neededOperations = Arrays.asList(arrayColumn);
   }
 
   public Multiply(String name, AggregatedValue scalarColumn, String arrayColumn) {
     super(name);
     this.column = Multiply.udf.apply(scalarColumn.toColumn(), col(arrayColumn)).alias(name);
-    this.neededAggregations = List.of(scalarColumn);
+    this.neededAggregations = Arrays.asList(scalarColumn);
   }
 
   public Multiply(String name, AggregatedValue scalarColumn, AggregatedValue arrayColumn) {
     super(name);
     this.column = Multiply.udf.apply(scalarColumn.toColumn(), arrayColumn.toColumn()).alias(name);
-    this.neededAggregations = List.of(scalarColumn, arrayColumn);
+    this.neededAggregations = Arrays.asList(scalarColumn, arrayColumn);
   }
 
   public Multiply(String name, AggregatedValue scalarColumn, Operation arrayColumn) {
     super(name);
     this.column = Multiply.udf.apply(scalarColumn.toColumn(), arrayColumn.toColumn()).alias(name);
-    this.neededAggregations = List.of(scalarColumn);
-    this.neededOperations = List.of(arrayColumn);
+    this.neededAggregations = Arrays.asList(scalarColumn);
+    this.neededOperations = Arrays.asList(arrayColumn);
   }
 
   public Multiply(String name, Operation scalarColumn, String arrayColumn) {
     super(name);
     this.column = Multiply.udf.apply(scalarColumn.toColumn(), col(arrayColumn)).alias(name);
-    this.neededOperations = List.of(scalarColumn);
+    this.neededOperations = Arrays.asList(scalarColumn);
   }
 
   public Multiply(String name, Operation scalarColumn, AggregatedValue arrayColumn) {
     super(name);
     this.column = Multiply.udf.apply(scalarColumn.toColumn(), arrayColumn.toColumn()).alias(name);
-    this.neededAggregations = List.of(arrayColumn);
-    this.neededOperations = List.of(scalarColumn);
+    this.neededAggregations = Arrays.asList(arrayColumn);
+    this.neededOperations = Arrays.asList(scalarColumn);
   }
 
   public Multiply(String name, Operation scalarColumn, Operation arrayColumn) {
     super(name);
     this.column = Multiply.udf.apply(scalarColumn.toColumn(), arrayColumn.toColumn()).alias(name);
-    this.neededOperations = List.of(scalarColumn, arrayColumn);
+    this.neededOperations = Arrays.asList(scalarColumn, arrayColumn);
   }
 
   public Column toAggregateColumn() {
