@@ -4,6 +4,8 @@ import static org.apache.spark.sql.functions.col;
 import static org.apache.spark.sql.functions.element_at;
 
 import io.atoti.spark.aggregation.AggregatedValue;
+
+import java.util.Arrays;
 import java.util.List;
 
 public final class VectorAt extends Operation {
@@ -16,12 +18,12 @@ public final class VectorAt extends Operation {
   public VectorAt(String name, AggregatedValue arrayColumn, int position) {
     super(name);
     this.column = element_at(arrayColumn.toColumn(), position).alias(name);
-    this.neededAggregations = List.of(arrayColumn);
+    this.neededAggregations = Arrays.asList(arrayColumn);
   }
 
   public VectorAt(String name, Operation arrayColumn, int position) {
     super(name);
     this.column = element_at(arrayColumn.toColumn(), position).alias(name);
-    this.neededOperations = List.of(arrayColumn);
+    this.neededOperations = Arrays.asList(arrayColumn);
   }
 }
